--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.0.0",
+    "hls.js": "^1.6.15",
     "lucide-react": "^0.344.0",
     "next": "^14.2.0",
     "react": "^18.3.0",
